import os

from sqlalchemy import create_engine, MetaData, Table, Column, Integer, BigInteger, LargeBinary, String, ForeignKey, Engine, \
    Float, insert, select, delete
from sqlalchemy.orm import sessionmaker

from config import DB_DIR, DB_PATH, DB_URL
from nlp import NlpDocContext


def setup_database(use_existing: bool = True) -> Engine:
    # Check if the directory exists
    if not os.path.exists(DB_DIR):
        os.makedirs(DB_DIR)
    # Handle database file
    if not use_existing and os.path.exists(DB_PATH):
        os.remove(DB_PATH)
    # Create the SQLAlchemy engine
    engine = create_engine(DB_URL, echo=False, future=True)
    return engine


# =====================================================
# Create table obejcts, compose metadata
metadata = MetaData()

documents = Table("documents", metadata,
                  Column("doc_id", Integer, primary_key=True, autoincrement=True),
                  Column("xxhash64", BigInteger, nullable=False, index=True),
                  Column("compressed_text", LargeBinary, nullable=False))

lemmas = Table("lemmas", metadata,
               Column("lemma_id", Integer, primary_key=True, autoincrement=True),
               Column("lemma", String, unique=True, nullable=False))

documents_lemmas = Table("documents_lemmas", metadata,
                         Column("doc_id", Integer, ForeignKey("documents.doc_id", ondelete="CASCADE"), primary_key=True),
                         Column("lemma_id", Integer, ForeignKey("lemmas.lemma_id", ondelete="CASCADE"), primary_key=True),
                         Column("lemma_count", Integer, nullable=False),
                         Column("lemma_tf", Float, nullable=False)) # Float is equivalent to FLOAT UNSIGNED, both 4 bytes


# =====================================================

class Corpus:
    """
    Interface for the SQLite-powered text corpus using SQLAlchemy Core as DSL.

    """
    def __init__(self, engine: Engine):
        self.engine = engine
        self.Session = sessionmaker(bind=self.engine, future=True)  # Session factory
        # Create tables from metadata
        metadata.create_all(self.engine)

    def add_document(self, nlp: NlpDocContext) -> int:
        if not nlp.is_full():
            raise ValueError("All fields in NlpDocContext must be filled with data before in being added to database.")

        with self.Session() as session:
            with session.begin():
                # 1) Insert document to `documents`
                res = session.execute(insert(documents)
                                      .values(xxhash64=nlp.xxhash64,
                                              compressed_text=nlp.compressed_text)
                                      .returning(documents.c.doc_id))
                doc_id = res.scalar_one() # Get primary key of last added entry (first autoincremented doc_id)

                # 2) Upsert lemmas to `lemmas`
                unique_lemmas = set(nlp.lemmas_count_map.keys())
                for lemma in unique_lemmas:
                    session.execute(insert(lemmas).prefix_with("OR IGNORE").values(lemma=lemma))
                    
                # 3) Fetch lemma IDs
                rows = session.execute(select(lemmas.c.lemma_id, lemmas.c.lemma)
                                       .where(lemmas.c.lemma.in_(unique_lemmas))) # each row is (lemma_id, lemma)
                lemmas_map = {row.lemma: row.lemma_id for row in rows}

                # 4) Fill associations table `documents_lemmas`
                doc_lemma_rows = []
                for curr_lemma in unique_lemmas:
                    doc_lemma_rows.append({"doc_id": doc_id,
                                           "lemma_id": lemmas_map[curr_lemma],
                                           "lemma_count": nlp.lemmas_count_map[curr_lemma],
                                           "lemma_tf": nlp.lemmas_tf_map[curr_lemma]})
                session.execute(insert(documents_lemmas), doc_lemma_rows)

        return doc_id

    def del_document(self, doc_id: int) -> None:
        """
        Delete a document from the database. Associated lemmas and associations will be deleted automatically
        due to the 'CASCADE' delete rule on the foreign key constraints.
        """
        with self.Session() as session:
            with session.begin():
                session.execute(delete(documents).where(documents.c.doc_id == doc_id))

